edit share mixin

--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -39,3 +39,16 @@ mixin sAboutCaptionItem(pic,title,text)
 			img(src=`img/svg/${pic}.svg`, alt="")
 		+e.title!=title
 		+e.text!=text
+
+mixin share()
+	+b.share-block
+		p Поделиться
+		+soc()
+			+item-sos()
+				+icon('vk2')
+			+item-sos()
+				+icon('in2')
+			+item-sos()
+				+icon('whatsapp2')
+			+item-sos()
+				+icon('telegram2')
