--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -43,6 +43,10 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
+.icon-in2 {
+	font-size:math.div(14,10)*1rem;
+	width: math.div(15,14)*1em;
+}
 .icon-instagram {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
@@ -59,6 +63,10 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
+.icon-telegram2 {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
 .icon-viber {
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
@@ -67,7 +75,15 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
+.icon-vk2 {
+	font-size:math.div(22,10)*1rem;
+	width: math.div(22,22)*1em;
+}
 .icon-whatsapp {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
+.icon-whatsapp2 {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
