--- a/sourse/pug/pages/06-service.pug
+++ b/sourse/pug/pages/06-service.pug
@@ -13,6 +13,7 @@ include ../blocks/sStatus/_sStatus.pug
 include ../blocks/sPrinciples/_sPrinciples.pug
 include ../blocks/sServiceSupport/_sServiceSupport.pug
 include ../blocks/sOpportunities/_sOpportunities.pug
+include ../blocks/sFocus/_sFocus.pug
 include ../blocks/sJoin/_sJoin.pug 
 include ../blocks/sForm/_sForm.pug
 include ../blocks/footer/_footer.pug
@@ -34,6 +35,7 @@ block pagecontent
 	+headerBlockBody('Service1',`Технический консалтинг и поддержка`,`Предоставляем услуги по&nbsp;технической поддержке, обслуживанию и&nbsp;совершенствованию ИТ-инфраструктуры малым, средним и&nbsp;крупным компаниям.`,'right').bg-dark.section--vh
 	+sServiceSupport.bg-white.section--vh
 	+sOpportunities.bg-dark.section--vh
+	+sFocus.bg-white.section--vh
 	//- +sPrinciples.bg-white.section--vh
 	//- +sWorkConditions.bg-dark.section--vh
 	//- +sStatus.bg-white.section--vh
