--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -118,6 +118,7 @@ $output-bourbon-deprecation-warnings: false;
 @import '../pug/blocks/sServiceSupport/_sServiceSupport.scss';
 @import '../pug/blocks/sOpportunities/_sOpportunities.scss';
 @import '../pug/blocks/sStatus/_sStatus.scss';
+@import '../pug/blocks/sFocus/_sFocus.scss';
 @import '../pug/blocks/sPrinciples/_sPrinciples.scss';
 @import '../pug/blocks/sWorkConditions/_sWorkConditions.scss';
 
