edit share mixin 2

--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -44,11 +44,7 @@ mixin share()
 	+b.share-block
 		p Поделиться
 		+soc()
-			+item-sos()
-				+icon('vk2')
-			+item-sos()
-				+icon('in2')
-			+item-sos()
-				+icon('whatsapp2')
-			+item-sos()
-				+icon('telegram2')
+			+item-sos('vk2')
+			+item-sos('in2')
+			+item-sos('whatsapp2')
+			+item-sos('telegram2')
