--- a/sourse/pug/pages/06-service.pug
+++ b/sourse/pug/pages/06-service.pug
@@ -12,6 +12,7 @@ include ../blocks/sNumericalIndicators/_sNumericalIndicators.pug
 include ../blocks/sStatus/_sStatus.pug
 include ../blocks/sPrinciples/_sPrinciples.pug
 include ../blocks/sServiceSupport/_sServiceSupport.pug
+include ../blocks/sService/_sService.pug
 include ../blocks/sOpportunities/_sOpportunities.pug
 include ../blocks/sFocus/_sFocus.pug
 include ../blocks/sJoin/_sJoin.pug 
@@ -36,6 +37,7 @@ block pagecontent
 	+sServiceSupport.bg-white.section--vh
 	+sOpportunities.bg-dark.section--vh
 	+sFocus.bg-white.section--vh
+	+sService.bg-white
 	//- +sPrinciples.bg-white.section--vh
 	//- +sWorkConditions.bg-dark.section--vh
 	//- +sStatus.bg-white.section--vh
