--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -116,6 +116,7 @@ $output-bourbon-deprecation-warnings: false;
 @import '../pug/blocks/sValueProposition/_sValueProposition.scss';
 @import '../pug/blocks/sNumericalIndicators/_sNumericalIndicators.scss';
 @import '../pug/blocks/sServiceSupport/_sServiceSupport.scss';
+@import '../pug/blocks/sService/_sService.scss';
 @import '../pug/blocks/sOpportunities/_sOpportunities.scss';
 @import '../pug/blocks/sStatus/_sStatus.scss';
 @import '../pug/blocks/sFocus/_sFocus.scss';
