--- a/sourse/pug/blocks/sFocus/_sFocus.pug
+++ b/sourse/pug/blocks/sFocus/_sFocus.pug
@@ -14,4 +14,5 @@ mixin sFocus(data)
 				+item(`2`,`Объективная оценка качества услуг. Наличие норм и&nbsp;метрик, позволяющих измерить уровень и&nbsp;качество предоставления услуг`)
 				+item(`3`,`Доступность и&nbsp;гарантия надежности сервиса. Наличие внешних спецификаций услуг, внедрение методологии, инфраструктура сопровождения.`)
 				+item(`4`,`Гибкий подход к&nbsp;оказанию услуг и&nbsp;возможность оптимизации сервисной модели на&nbsp;основании фактической статистики`)
+		+share()
 	// end sFocus
