--- a/sourse/pug/blocks/sFocus/_sFocus.scss
+++ b/sourse/pug/blocks/sFocus/_sFocus.scss
@@ -30,6 +30,7 @@
 		}
 		--bs-gutter-x: #{rem(24)};
 		--bs-gutter-y: #{rem(24)};
+		margin-bottom: rem(32);
 	}
 	&__item {
 		display: flex;
@@ -55,6 +56,9 @@
 		font-size: rem(18);
 		line-height: calc(24 / 18);
 		padding-top: rem(8);
+	}
+	.share-block{
+		margin-top: auto;
 	}
 	@include media-breakpoint-up(xl) {
 	}
