--- a/sourse/pug/blocks/sService/_sService.scss
+++ b/sourse/pug/blocks/sService/_sService.scss
@@ -73,6 +73,7 @@
 		margin-top: rem(16);
 		padding-top: rem(8);
 		padding-bottom: rem(8);
+		display: inline-block;
 		span {
 			font-size: rem(12);
 			line-height: calc(16 / 12);
