--- a/sourse/pug/blocks/sWorkConditions/_sWorkConditions.scss
+++ b/sourse/pug/blocks/sWorkConditions/_sWorkConditions.scss
@@ -14,6 +14,12 @@
 	}
 	&__item {
 	}
+	&--service{
+		@include media-breakpoint-up(lg){
+			--sTPB: #{rem(80)};
+		}
+		--sTPB: #{rem(24)};
+	}
 	h2 {
 		margin-bottom: 0;
 		text-transform: uppercase;
