--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -117,6 +117,8 @@ $output-bourbon-deprecation-warnings: false;
 @import '../pug/blocks/sNumericalIndicators/_sNumericalIndicators.scss';
 @import '../pug/blocks/sServiceSupport/_sServiceSupport.scss';
 @import '../pug/blocks/sService/_sService.scss';
+@import '../pug/blocks/sResourceBase/_sResourceBase.scss';
+@import '../pug/blocks/sTechnology/_sTechnology.scss';
 @import '../pug/blocks/sOpportunities/_sOpportunities.scss';
 @import '../pug/blocks/sStatus/_sStatus.scss';
 @import '../pug/blocks/sFocus/_sFocus.scss';
