--- a/sourse/pug/blocks/sContent/_sContent.pug
+++ b/sourse/pug/blocks/sContent/_sContent.pug
@@ -58,7 +58,7 @@ mixin sContent()
 				+articleTableContent('Dignissim', 'Vestibulum', 'Fusce', 'Donec')
 		.container.container--large.mb-32
 			blockquote
-				h4 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida magna ac vehicula volutpat.
+				h4 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida magna ac vehicula volutpat. Nam non aliquam magna. Etiam et consectetur purus.
 				cite Алексей Литвин
 					span Директор
 		.container.container--small.mb-32
@@ -90,6 +90,6 @@ mixin sContent()
 			h4.mb-32 H4 Header two line words description
 			h5 H5 Header two line words description
 			p.mb-0 Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.
-		.container.container--small.mb-32
+		.container.container--small.pb-32
 			+share()
 	// end sContent
