--- a/sourse/pug/pages/13-article.pug
+++ b/sourse/pug/pages/13-article.pug
@@ -5,6 +5,7 @@ include ../blocks/topLine/_topLine.pug
 include ../blocks/top-nav/_top-nav.pug 
 include ../blocks/headerBlock/_headerBlock.pug
 include ../blocks/sContent/_sContent.pug
+include ../blocks/sService/_sService.pug
  
 //- include ../blocks/sContact/_sContact.pug 
 include ../blocks/sValueProposition/_sValueProposition.pug
@@ -37,6 +38,7 @@ block pagecontent
 	//- +sWorkConditions.bg-dark.section--vh
 	//- +sStatus.bg-white.section--vh
 	+sContent().bg-white.section--vh
+	+sService2()
 	+footer().bg-dark
       
 
