--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -7,6 +7,10 @@
 	fill: currentColor;
 }
 
+.icon-arrow-left-link {
+	font-size:math.div(8,10)*1rem;
+	width: math.div(40,8)*1em;
+}
 .icon-arrow-right {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
