--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -647,6 +647,13 @@ iframe {
 	}
 }
 
+.pb-32 {
+	padding-bottom: 24px;
+	@include media-breakpoint-up(lg) {
+		padding-bottom: 32px;
+	}
+}
+
 .mb-56 {
 	margin-bottom: rem(48);
 	@include media-breakpoint-up(lg) {
