--- a/sourse/pug/blocks/sContent/_sContent.pug
+++ b/sourse/pug/blocks/sContent/_sContent.pug
@@ -93,3 +93,80 @@ mixin sContent()
 		.container.container--small.pb-32
 			+share()
 	// end sContent
+
+mixin sContent2()
+	// start sContent
+	+b.SECTION.sContent.section#sContent&attributes(attributes)
+		.container.container--small.mb-56
+			h4 Donec pellentesque efficitur dui, id dictum ex aliquam id. Vivamus imperdiet pretium odio sit amet laoreet. Vivamus nec velit volutpat quam laoreet lobortis a sed est.
+			p.fw-light.mb-0 Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.
+		.container.container--small.mb-56
+			h2 Fusce sed auctor nibh
+			p.fw-light.mb-0 Quisque ut&nbsp;consectetur risus, in&nbsp;rhoncus urna. Aenean pellentesque, velit id&nbsp;suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et&nbsp;justo pulvinar tincidunt et&nbsp;vel enim. Cras at&nbsp;nulla massa. Nulla metus enim, consequat eu&nbsp;ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.
+		.container.container--small.mb-56
+			+e.UL.default-list
+				li Proin mollis libero quis lacus posuere, sit amet varius nunc fringilla
+				li In posuere, augue eget ornare congue, eros ex bibendum
+					ul
+						li In finibus vitae lorem nec scelerisque
+						li Phasellus eu aliquam ex. Integer facilisis velit lacus, vel venenatis est aliquam sit amet
+				li Proin suscipit placerat turpis
+		.container.container--large.mb-56
+			.mediaContent
+				+img('img/article-img-2.jpg', 'bg')
+			span Description
+		.container.container--small.mb-56
+			mixin articleTable(th1, th2, th3, th4)
+				+e.tableWrap
+					table
+						thead
+							tr
+								th(scope='col')!= th1
+								th(scope='col')!= th2
+								th(scope='col')!= th3
+								th(scope='col')!= th4
+						tbody
+							block
+			mixin articleTableContent(thead, td1, td2, td3)
+				tr
+					td(scope='row')!= thead
+					td!= td1
+					td!= td2
+					td!= td3
+			h6.mb-32 H6 Header two line words description
+			+articleTable('Maecenas', 'Phasellus', 'Gravida', 'Integer')
+				+articleTableContent('Nullam', 'Tincidunt', 'Tincidunt', 'Dapibus')
+				+articleTableContent('Luctus', 'Mauris', 'Felis', 'Aenean')
+				+articleTableContent('Dignissim', 'Vestibulum', 'Fusce', 'Donec')
+		.container.container--large.container--indent
+			blockquote
+				h4 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida magna ac vehicula volutpat. Nam non aliquam magna. Etiam et consectetur purus.
+				cite Алексей Литвин
+					span Директор
+		.container.container--small.mb-32
+			h3.mb-32 H3 Header two line words description
+			p.mb-0 Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.
+		.container.container--small.mb-56
+			+e.OL.num-list
+				li Nam luctus orci non suscipit mollis
+				li Proin suscipit placerat turpis, vitae fermentum turpis auctor vel
+					ol
+						li Donec scelerisque massa nec sapien tempus consectetur
+						li Morbi vehicula mauris neque
+				li Quisque aliquet nibh nec egestas faucibus
+		.container.container--small.mb-56
+			mixin slide()
+				+e.slide.swiper-slide
+					+e.item
+						+img(`img/article-img-3.jpg`, `bg`, 0)
+					
+			+e.sliderContainer
+				+e.slider--js.swiper
+					.swiper-wrapper
+						+slide()
+						+slide()
+						+slide()
+				+e.arrow-wrap
+					+arrow
+		.container.container--small.pb-32
+			+share()
