--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -27,3 +27,28 @@ mixin headerBlockBody(name,title,caption,right)
 				p!=caption
 	// end headerBlock
 
+mixin headerArtical()
+	// start headerBlock
+	+b.headerBlock--artical.bg-wrap.section#headerBlock&attributes(attributes)
+		+e.row.row
+			.col-md-6.order-2.order-md-1
+				+e.img-wrap
+					+img('img/article-img-1.jpg', 'bg')
+				+e.tags.d-flex.d-md-none
+					a(href="#") #жизнь компании
+					a(href="#") #новости команды
+			+e.col.col-md-6.text-center.bg-wrap.order-1.order-md-2
+				video(preload='auto' autoplay='autoplay' loop='loop' playsinline='playsinline' muted='muted' poster='img/poster.webp').bg-video
+					source(src='video/video.webm' type='video/webm')
+					source(src='video/video.mp4' type='video/mp4')
+				+e.back(href="#").mb-32
+					+icon('chevron-left')
+					| Вернуться в пресс-центр
+				+e.content
+					.h6 12 сентября 2022
+					h1 SAPRUN вошёл в TOP-5 крупнейших российских аутсорсеров поддержки решений SAP-2020.
+					p online
+					a(href="#").btn.btn-outline-primary Хочу пойти
+				+e.tags.d-none.d-md-flex
+					a(href="#") #жизнь компании
+					a(href="#") #новости команды
