--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -77,11 +77,14 @@
 	&--artical {
 		padding-top: rem(48);
 		padding-bottom: rem(24);
+		height: auto;
+		min-height: auto;
 		@include media-breakpoint-up(lg) {
 			margin: 0 rem(16);
 		}
 		@include media-breakpoint-up(md) {
 			padding-top: 48px;
+			height: 100vh;
 		}
 		@include media-breakpoint-up(lg) {
 			padding-top: 47px;
@@ -89,9 +92,6 @@
 		}
 		@include media-breakpoint-up(xl) {
 			padding-top: 57px;
-		}
-		@include media-breakpoint-down(md) {
-			min-height: auto;
 		}
 	}
 	&__row {
@@ -115,22 +115,23 @@
 		}
 	}
 	&__img-wrap {
+		@include block(328,328);
+		img {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+		}
 		@include media-breakpoint-down(md) {
 			margin: rem(16);
-			@include block(328, 151);
-			img {
-				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-			}
 		}
-		@include media-breakpoint-down(sm) {
-			--ratio: 328/328;
+		@include media-breakpoint-up(sm) {
+			--ratio: 151/328;
 		}
 		@include media-breakpoint-up(md) {
 			height: 100%;
+			--ratio: 624/623;
 		}
 	}
 	&__back {
@@ -178,6 +179,19 @@
 			width: 100%;
 			@include media-breakpoint-up(md) {
 				max-width: rem(219);
+			}
+		}
+		&--2 {
+			h1 {
+				margin-bottom: rem(16);
+				@include media-breakpoint-up(md) {
+					margin-bottom: rem(16);
+				}
+			}
+			p {
+				opacity: 1;
+				font-weight: 300;
+				font-size: rem(18);
 			}
 		}
 	}
