--- a/sourse/pug/blocks/sContent/_sContent.pug
+++ b/sourse/pug/blocks/sContent/_sContent.pug
@@ -170,3 +170,26 @@ mixin sContent2()
 					+arrow
 		.container.container--small.pb-32
 			+share()
+
+mixin sContent3()
+	+b.SECTION.sContent.section#sContent&attributes(attributes)
+		mixin content-list(t, listText, ...list)
+			+e.H3.list-title!= t
+			if listText
+				+e.list-text!= listText
+			+e.UL.list
+				each item in list
+					li!= item
+		.container.container--small.mb-56
+			+content-list('Возможности решения', '', 'Регистрация, квалификация и&nbsp;дисквалификация поставщиков' ,'Регистрация, квалификация и&nbsp;дисквалификация поставщиков', 'Процесс классификации поставщиков по&nbsp;товарам, регионам и&nbsp;бизнес-подразделениям на&nbsp;основе сегментационной матрицы' , 'Фиксация всех документов поставщика, включая сертификаты', 'Готовые автоматизированные отчеты, обеспечивающие комплексное представление всех данных о&nbsp;поставщике с&nbsp;консолидацией всех относящихся расходов', 'Автоматизированные уведомления на&nbsp;инструментальной панели и&nbsp;в&nbsp;системах KPI при выявлении выходящих за&nbsp;пределы оценок')
+		.container.container--small.mb-56
+			+content-list('Выгоды для бизнеса', '', 'Повышение надежности и эффективности поставщиков', 'Сотрудничество с лучшими поставщиками', 'Снижение операционных затрат на процесс около 11%')
+		.container.container--small.mb-56
+			+content-list('Как это работает', 'Автоматизация на&nbsp;базе продукта SAP ARIBA SLP (Supplier Lifecycle and Performance). Является облачным решением.' , 'Внедрение облачного решения Ariba SLP не&nbsp;требует обширных инвестиций и&nbsp;значительного времени', 'Интеграция с&nbsp;бизнес-сетью Ариба', 'Возможность использования преднастроенных бизнес-процессов', 'Процесс управления поставщиками интегрирован в end-to-end процесс закупок', 'Повышение эффективности операционной деятельности департамента закупки за&nbsp;счет вовлечения поставщиков', 'Полный обзор деятельности поставщика в&nbsp;профиле 360', 'Возможность подключения с мобильных устройств')
+		.container.container--small.mb-56
+			+content-list('Преимущества работы с SAPRUN', '', 'Наличие сертифицированных консультантов, которые обладают опытом и&nbsp;знаниями для успешного развертывания решения.', 'Использование опыта (ноу-хау) наших предыдущих проектов')
+		.container.container--small.mb-56
+			+content-list('Успешные внедрения')
+			+e.list-text #[a(href="#") Bank of Georgia] &laquo;Внедрение системы управления поставщиками&raquo; (ссылка<br>на&nbsp;соответствующий кейс)
+		.container.container--small.mb-56
+			+share()
