--- a/sourse/pug/blocks/sContent/_sContent.scss
+++ b/sourse/pug/blocks/sContent/_sContent.scss
@@ -69,6 +69,31 @@
 			height: 100%;
 		}
 	}
+	// ul {
+	// 	list-style-type: none;
+	// 	li {
+	// 		position: relative;
+	// 		&::before {
+	// 			content: '';
+	// 			position: absolute;
+	// 			display: block;
+	// 			width: 3px;
+	// 			height: 3px;
+	// 			background-color: #08080B;
+	// 			left: -21px;
+	// 			top: 14px;
+	// 			// transform: translateY(-50%);
+	// 			border-radius: 50%;
+	// 		}
+	// 	}
+	// }
+	ul {
+		li {
+			&::marker {
+				font-size: 16px;
+			}
+		}
+	}
 	&__default-list {
 		font-weight: 300;
 		margin-left: rem(23);
@@ -254,6 +279,27 @@
 	&__arrow-wrap {
 		display: flex;
 		gap: 24px;
+	}
+	&__list-title {
+		margin-bottom: rem(22);
+	}
+	&__list-text {
+		color: #08080B;
+		font-weight: 300;
+		margin-bottom: rem(16);
+	}
+	&__list {
+		margin-left: rem(33);
+		@include media-breakpoint-up(lg) {
+			margin-left: rem(53);
+		}
+		li {
+			font-weight: 300;
+			color: #08080B;
+			&:not(:last-child) {
+				margin-bottom: rem(14);
+			}
+		}
 	}
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
