--- a/sourse/pug/pages/09-subspecies-services.pug
+++ b/sourse/pug/pages/09-subspecies-services.pug
@@ -37,6 +37,8 @@ block pagecontent
 	+sService2().bg-white
 		+sService2Item('', 'Построение автоматизированной системы распределения операционных расходов', '', 'sberbank.svg', 'Финансы, Управление цепочками поставок')
 		+sService2Item('', 'Управление программой IT-деятельности компании на базе SAP BPC NW', 'right', 'trans.svg', 'Финансы, Управление цепочками поставок')
+	+sService2().bg-white
+		+sService2Item('', 'Управление программой IT-деятельности компании на базе SAP BPC NW', 'right', 'trans.svg', 'Финансы, Управление цепочками поставок', 'true').--single
 	+footer().bg-dark
       
 
