--- a/sourse/pug/blocks/sContent/_sContent.pug
+++ b/sourse/pug/blocks/sContent/_sContent.pug
@@ -168,7 +168,7 @@ mixin sContent2()
 						+slide()
 				+e.arrow-wrap
 					+arrow
-		.container.container--small.pb-32
+		.container.container--small.pb-56
 			+share()
 
 mixin sContent3()
@@ -177,9 +177,10 @@ mixin sContent3()
 			+e.H3.list-title!= t
 			if listText
 				+e.list-text!= listText
-			+e.UL.list
-				each item in list
-					li!= item
+			if list
+				+e.UL.list
+					each item in list
+						li!= item
 		.container.container--small.mb-56
 			+content-list('Возможности решения', '', 'Регистрация, квалификация и&nbsp;дисквалификация поставщиков' ,'Регистрация, квалификация и&nbsp;дисквалификация поставщиков', 'Процесс классификации поставщиков по&nbsp;товарам, регионам и&nbsp;бизнес-подразделениям на&nbsp;основе сегментационной матрицы' , 'Фиксация всех документов поставщика, включая сертификаты', 'Готовые автоматизированные отчеты, обеспечивающие комплексное представление всех данных о&nbsp;поставщике с&nbsp;консолидацией всех относящихся расходов', 'Автоматизированные уведомления на&nbsp;инструментальной панели и&nbsp;в&nbsp;системах KPI при выявлении выходящих за&nbsp;пределы оценок')
 		.container.container--small.mb-56
@@ -188,8 +189,8 @@ mixin sContent3()
 			+content-list('Как это работает', 'Автоматизация на&nbsp;базе продукта SAP ARIBA SLP (Supplier Lifecycle and Performance). Является облачным решением.' , 'Внедрение облачного решения Ariba SLP не&nbsp;требует обширных инвестиций и&nbsp;значительного времени', 'Интеграция с&nbsp;бизнес-сетью Ариба', 'Возможность использования преднастроенных бизнес-процессов', 'Процесс управления поставщиками интегрирован в end-to-end процесс закупок', 'Повышение эффективности операционной деятельности департамента закупки за&nbsp;счет вовлечения поставщиков', 'Полный обзор деятельности поставщика в&nbsp;профиле 360', 'Возможность подключения с мобильных устройств')
 		.container.container--small.mb-56
 			+content-list('Преимущества работы с SAPRUN', '', 'Наличие сертифицированных консультантов, которые обладают опытом и&nbsp;знаниями для успешного развертывания решения.', 'Использование опыта (ноу-хау) наших предыдущих проектов')
-		.container.container--small.mb-56
+		.container.container--small.pb-56
 			+content-list('Успешные внедрения')
 			+e.list-text #[a(href="#") Bank of Georgia] &laquo;Внедрение системы управления поставщиками&raquo; (ссылка<br>на&nbsp;соответствующий кейс)
-		.container.container--small.mb-56
-			+share()
+		//- .container.container--small.mb-56
+		//- 	+share()
