--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -660,3 +660,10 @@ iframe {
 		margin-bottom: rem(56);
 	}
 }
+
+.pb-56 {
+	padding-bottom: rem(48);
+	@include media-breakpoint-up(lg) {
+		padding-bottom: rem(56);
+	}
+}
