--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -79,8 +79,10 @@
 		padding-bottom: rem(24);
 		height: auto;
 		min-height: auto;
+		background-color: #fff;
+		justify-content: center;
 		@include media-breakpoint-up(lg) {
-			margin: 0 rem(16);
+			padding: 0 rem(16);
 		}
 		@include media-breakpoint-up(md) {
 			padding-top: 48px;
@@ -193,6 +195,36 @@
 				font-weight: 300;
 				font-size: rem(18);
 			}
+		}
+		&--3 {
+			margin-top: auto;
+			img {
+				margin-bottom: rem(54);
+			}
+			.h6 {
+				margin-bottom: rem(10);
+				font-weight: 600;
+				text-transform: uppercase;
+			}
+			h1 {
+				margin-bottom: rem(21);
+			}
+			a {
+				width: 100%;
+				@include media-breakpoint-up(md) {
+					max-width: rem(279);
+				}
+			}
+		}
+		
+	}
+	&__desc {
+		margin-top: rem(32);
+		font-weight: 300;
+		font-size: rem(13);
+		margin-bottom: rem(16);
+		@include media-breakpoint-up(md) {
+			margin-top: auto;
 		}
 	}
 	&__tags {
