--- a/sourse/pug/pages/09-subspecies-services.pug
+++ b/sourse/pug/pages/09-subspecies-services.pug
@@ -31,7 +31,7 @@ block pagecontent
 			source(src='video/video.mp4' type='video/mp4')
 	
 	+top-nav()
-	+headerArtical('Вернуться к услугам', 'article-img-4.jpg', '', '#жизнь компании', '#Новости команды', '#жизнь компании').bg-dark
+	+headerArtical('Вернуться к услугам', 'article-img-4.jpg', '', '#жизнь компании', '#Новости команды', '#жизнь компании').bg-white.section--vh
 		+headerArtical-content('', 'second')
 	+sContent3().bg-white.section--vh
 	+sService2().bg-white
