--- a/sourse/pug/pages/11-case.pug
+++ b/sourse/pug/pages/11-case.pug
@@ -31,9 +31,9 @@ block pagecontent
 			source(src='video/video.mp4' type='video/mp4')
 	
 	+top-nav()
-	+headerArtical('Вернуться к проектам', 'article-img-5.jpg', 'desc', '#жизнь компании', '#Новости команды', '#жизнь компании').bg-white
+	+headerArtical('Вернуться к проектам', 'article-img-5.jpg', 'desc', '#жизнь компании', '#Новости команды', '#жизнь компании').bg-white.section--vh
 		+headerArtical-content()
-	+sContent3().bg-white.section--vh
+	+sContent4().bg-white.section--vh
 	+sService2().bg-white
 		+sService2Item('', 'Построение автоматизированной системы распределения операционных расходов', '', 'sberbank.svg', 'Финансы, Управление цепочками поставок')
 		+sService2Item('', 'Управление программой IT-деятельности компании на базе SAP BPC NW', 'right', 'trans.svg', 'Финансы, Управление цепочками поставок')
