--- a/sourse/pug/pages/13-article-2.pug
+++ b/sourse/pug/pages/13-article-2.pug
@@ -37,7 +37,7 @@ block pagecontent
 	//- +sPrinciples.bg-white.section--vh
 	//- +sWorkConditions.bg-dark.section--vh
 	//- +sStatus.bg-white.section--vh
-	+headerArtical('Вернуться в пресс-центр', 'article-img-1.jpg', '', '#жизнь компании', '#новости команды').bg-dark
+	+headerArtical('Вернуться в пресс-центр', 'article-img-1.jpg', '', '#жизнь компании', '#новости команды').bg-white.section--vh
 		+headerArtical-content('first')
 	+sContent2().bg-white.section--vh
 	+sService2().bg-white
