--- a/sourse/pug/pages/13-article.pug
+++ b/sourse/pug/pages/13-article.pug
@@ -38,7 +38,9 @@ block pagecontent
 	//- +sWorkConditions.bg-dark.section--vh
 	//- +sStatus.bg-white.section--vh
 	+sContent().bg-white.section--vh
-	+sService2()
+	+sService2().bg-white
+		+sService2Item('12 сентября 2022','Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo.', '')
+		+sService2Item('6 сентября 2022','Nam non aliquam magna. Etiam et consectetur purus posuere tempor massa. Vestibulum viverra luctus posuere.', 'true')
 	+footer().bg-dark
       
 
