--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -81,6 +81,7 @@
 		min-height: auto;
 		background-color: #fff;
 		justify-content: center;
+		height: 100%;
 		@include media-breakpoint-up(lg) {
 			padding: 0 rem(16);
 		}
@@ -107,7 +108,7 @@
 		}
 	}
 	&__col {
-		padding: rem(24) rem(48);
+		padding: rem(24) rem(48) rem(35);
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
@@ -223,6 +224,7 @@
 		font-weight: 300;
 		font-size: rem(13);
 		margin-bottom: rem(16);
+		color: #7E7D85;
 		@include media-breakpoint-up(md) {
 			margin-top: auto;
 		}
